# PeerStash

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
docs/: README.md
peerstash-compose/: .releaserc.json  docker-compose-dev-shell.yml  docker-compose-dev-web.yml  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  example.env  package-lock.json  package.json
peerstash-control/: .releaserc.json  Dockerfile  package-lock.json  package.json  pyproject.toml  supervisord.conf
peerstash-control/peerstash/: __init__.py  __main__.py  daemon.py  setup.py
peerstash-control/peerstash/cli/: __init__.py  cmd_backup.py  cmd_cancel.py  cmd_evict.py  cmd_id.py  cmd_list.py  cmd_login.py  cmd_mount.py  cmd_peers.py  cmd_prune.py  cmd_register.py  cmd_restore.py  cmd_schedule.py  cmd_setup.py  cmd_snapshots.py  cmd_unmount.py  utils.py
peerstash-control/peerstash/core/: backup.py  db.py  db_schemas.py  identity.py  registration.py  tailscale.py  utils.py
peerstash-control/scripts/: create_task.c  create_task.sh  get_id.sh  get_quota.sh  print_quota.sh  quota.sh  qutoa.sh  register.sh  remove_task.c  remove_task.sh  restore_snapshot.c  restore_snapshot.sh  run_df.sh  setup.sh  start-cron.sh  start-sshd.sh  sync_hosts.c
peerstash-control/tests/: conftest.py  test_cli_backup.py  test_cli_basic.py  test_cli_cancel.py  test_cli_evict.py  test_cli_id.py  test_cli_list.py  test_cli_mount.py  test_cli_peers.py  test_cli_prune.py  test_cli_register.py  test_cli_restore.py  test_cli_schedule.py  test_cli_setup.py  test_cli_snapshots.py  test_cli_unmount.py  test_cli_utils.py  test_core_backup.py  test_core_identity.py  test_core_registration.py  test_core_tailscale.py  test_core_utils.py  test_integration_docker.py
peerstash-control/tests/mocks/: db_mock.py  restic_mock.py  sftpgo_mock.py  subprocess_mock.py  tailscale_mock.py
peerstash-shell/: .releaserc.json  Dockerfile  package-lock.json  package.json
peerstash-web/: Dockerfile  (+3 more)
(+44 files in other folders)
