[project]
name = "peerstash"
version = "0.1.0"
description = "Peer-to-peer (p2p) backups between NAS machines owned by a group of friends"
authors = [
    { name = "BPR02", email = "dev@bpr02.com" }
]
requires-python = ">=3.13"
dependencies = [
    "oncalendar>=1.1",
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "resticpy>=1.3.0",
    "typer>=0.21.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
]
build = [
    "nuitka>=4.0",
    "zstandard>=0.25.0",
]

[project.scripts]
peerstash = "peerstash:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
